assets/css/style.scss
@import "core/vars",
        "core/mixins",
        "core/helper",
        "core/typography";

@import "objects/off-screen",
				"objects/lists";

@import "includes/syntax", /* syntax highlight styles*/
        "includes/bullgrid"; /* grid system */

@import "modules/navigation",
        "modules/header",
        "modules/footer",
        "modules/article",
        "modules/boxes",
        "modules/events",
        "modules/conditions";

*, *:before, *:after {
  margin: 0;
  padding: 0;
  @include vendor('box-sizing', 'border-box');
}

body {
  font:1em/1.65 $font--sans;
  width:100%;
  min-height:100%;
  background: #eee;
  overflow: hidden;
}

a {
  color:$color--accent;
  text-decoration:none;
  border-bottom: 1px solid $color--main;

    &:hover {
      color:$color--main;
    }
}

ul, ol {
  margin: .5em 1em;
}

p {
  margin: 1em 0;
}

/* Back To Top*/

.backtop {
  width: 2em;
  height: 2em;
  position: fixed;
  bottom: 1em;
  right: 1em;
  display: none;
  z-index: 9999;
  color: $color--main;
  font-size: 1em;
  text-align: center;
  padding: .5em .5em 0 .5em;
  border-bottom: none;

  svg {
    fill: $color--contrast;
  }
}

